Reviewed and updated doc

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
@@ -1,27 +1,24 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Java builder</title>
-</HEAD>
-<BODY BGCOLOR="#FFFFFF">
-<H1 CLASS="Head"> Java builder</H1>
-<P CLASS="Para"> The Java builder uses a compiler that implements the Java Language 
-  Specification.</P>
-<P CLASS="Para"> Problems detected by the compiler are classified as either warnings 
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Java builder</title></head>
+<body bgcolor="#ffffff">
+<h1 class="Head"> Java builder</h1>
+<p class="Para"> The Java builder uses a compiler that implements the Java Language 
+  Specification.</p>
+<p class="Para"> Problems detected by the compiler are classified as either warnings 
   or errors. The existence of a warning does not effect the execution of the program; 
   the code executes as if it were written correctly. Errors are problems that 
-  cannot be ignored. </P>
-<P CLASS="Para"> The Java compiler can create CLASS files, even in presence of 
+  cannot be ignored. </p>
+<p class="Para"> The Java compiler can create CLASS files, even in presence of 
   compilation errors. However, in the case of serious errors (for example, references 
-  to inconsistent binaries, most likely related to an invalid class path setting), 
-  the Java builder does not produce any CLASS file.</P>
+  to inconsistent binaries, most likely related to an invalid build path), 
+  the Java builder does not produce any CLASS file.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="cbuildcp.htm">Build class path</a><br>
   <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p dir="ltr"> <a href="../tasks/tasks-113.htm">Adding a JAR file to the build 
+<p dir="Ltr"> <a href="../tasks/tasks-113.htm">Adding a JAR file to the build 
   path</a><br>
   <a href="../tasks/tasks-112.htm">Adding a library folder to the build path</a><br>
   <a href="../tasks/tasks-106.htm">Building a Java program</a><br>
@@ -32,5 +29,4 @@
   <a href="../tasks/tasks-110.htm">Working with build paths</a></p>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
-</BODY>
-</HTML>
+</body></html>
