--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -1,14 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Java views</title>
-</head>
-<body bgcolor="#ffffff" lang="EN-US" link="blue" vlink="blue">
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Java views</title></head><body bgcolor="#ffffff" lang="EN-US" link="blue" vlink="blue">
 <div class="Section1"> 
   <h1>Java views</h1>
   <p class="para">The Java development tools contribute the following views to the 
     workbench:</p>
-  <h2>Package Explorer view</h2>
-  <p class="para">The Package Explorer view that is shown by default in the Java 
+  
+<h2>Package Explorer</h2>
+
+  <p class="para">The Package Explorer that is shown by default in the Java 
     perspective shows the Java element hierarchy of the Java projects in your 
     workbench. It provides you with a Java-specific view of the resources shown 
     in the Navigator. The element hierarchy is derived from the project's build 
@@ -26,7 +25,32 @@
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Show the Subtype 
       Hierarchy</span><span style="font-size: 10pt; font-family: Arial; "> displays the supertype hierarchy of a type.</span></li>
   </ul>
-  <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p>
+  
+<h2>Projects view</h2>
+<p class="para">The Projects view which is shown by default in the Java  
+   Browsing perspective shows Java projects and their source folders. The
+source folders are those defined on the project's Java build path. </p>
+<p class="para">For each project, its source folders and referenced libraries
+     are shown in a tree. You can select projects, source folders and both
+internal      and external JAR files but you can not drill into them. The
+selection is fed into the other views of the Java Browsing perspective.</p>
+<h2>
+</h2><h2>Packages view</h2>
+
+<p>This view which is shown by default in the Java 
+    Browsing perspective shows a list of Java packages. The currently selected element is used to feed this view.<br>
+</p>
+<h2>
+</h2><h2>Types view</h2>
+
+<p>This view which is shown by default in the Java 
+    Browsing perspective shows a list of Java types. The currently selected element is used to feed this view.<br></p>
+<h2>Members view</h2>
+<p>This view which is shown by default in the Java      Browsing perspective
+shows the content of a type, compilation unit or class file. The currently
+selected element is used to feed this view.<br></p>
+<p><br>
+<img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p>
   <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
     <a href="../concepts/concepts-5.htm">Java perspectives</a></p>
   <p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"></p>
