--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
@@ -1,15 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Java perspectives</title>
-</head>
-<body bgcolor="#ffffff" lang="EN-US" link="blue" vlink="blue">
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Java perspectives</title></head><body bgcolor="#ffffff" lang="EN-US" link="blue" vlink="blue">
 <div class="Section1"> 
   <h1>Java perspectives</h1>
   <p class="para">The Java development tools contribute the following perspectives 
     to the workbench.</p>
   <h2>Java </h2>
   <p class="para">A perspective tuned for working with Java projects. It consists 
-    of the following views:</p>
+    of an editor area and the following views:</p>
   <ul type="Disc">
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Package Explorer</span></li>
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Type Hierarchy</span></li>
@@ -20,7 +17,7 @@
   </ul>
   <h2>Java Browsing</h2>
   <p class="para">A perspective tuned for working with Java projects. It consists 
-    of the following views:</p>
+    of an editor area and the following views:</p>
   <ul type="Disc">
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Projects</span></li>
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Packages</span></li>
@@ -28,12 +25,12 @@
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Members</span></li>
   </ul>
   <h2>Java Type Hierarchy</h2>
-  <p class="para">This perspective allows you to explore the type hierarchy. It 
+  <p class="para">This perspective allows you to explore a type hierarchy. It 
     can be opened on types, compilation units, packages, projects or source folders 
     and consists of the Hierarchy view and an editor.</p>
   <h2>Debug</h2>
   <p class="para">This perspective is tuned for debugging your Java program. It 
-    includes the following views.</p>
+    includes an editor area and the following views.</p>
   <ul type="Disc">
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Debug</span></li>
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Breakpoints</span></li>
