init type hierarchy view  tt

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
@@ -4,13 +4,20 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Templates</title>
+<title>Type Hierarchy</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Type Hierarchy</H1>
-<P>&nbsp;<br>
-  <img src=" ../ngibmcpy.gif"> </P>
-
+<P>&nbsp;</P>
+<ul>
+  <li>You can open the Type Hierarchy not only on types but also on packages, 
+    source folders, JARs and Java projects.</li>
+  <li>You can drag and drop an element over the the Type Hierarchy view to focus 
+    it on that element.</li>
+  <li>You can change the orientation (from the default vertical to horizontal) 
+    of the Type Hierarchy view by using the Menu toolbar button.<br>
+    <img src=" ../ngibmcpy.gif"> </li>
+</ul>
 </BODY>
 </HTML>
