--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -4,14 +4,14 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Launching Your Programs</title>
+<title>Launching Your Applications</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Launching Your Programs</H1>
+Launching Your Applications</H1>
 <P CLASS="Para">
-In this section, you will learn more about launching the Java executables in the workbench.</P>
+In this section, you will learn more about launching Java applications in the workbench.</P>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
 <THEAD>
 </THEAD>
@@ -72,7 +72,7 @@ or the selected class in the Navigator, as a local Java application.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-Notice that the program is run and the following message appears in the Console view telling you that the program needs an execution argument.</P>
+Notice that the application is run and the following message appears in the Console view telling you that the application needs an execution argument.</P>
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-60.gif">
@@ -105,7 +105,7 @@ Run</SPAN> menu in the toolbar, select <SPAN CLASS="Label">Run...</SPAN>.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-The Launch Configurations dialog opens, and the TestRunner launch configuration is selected. When you ran the program
+The Launch Configurations dialog opens, and the TestRunner launch configuration is selected. When you ran the application
 using the Java Application shortcut, a launch configuration was automatically created with default settings to launch 
 the selected class.</P>
 <DIV CLASS="Snapshot">
@@ -141,7 +141,7 @@ junit.samples.VectorTest</SPAN> in the Program arguments area.</P>
 <TD valign="top" align="left">
 <P CLASS="Para">
  Click <SPAN CLASS="Label">
-Run</SPAN>. This time the program runs correctly, indicating the number of tests that were run.</P>
+Run</SPAN>. This time the application runs correctly, indicating the number of tests that were run.</P>
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-64.gif">
@@ -157,7 +157,7 @@ Run</SPAN>. This time the program runs correctly, indicating the number of tests
 </TD><TD valign="top" align="left">
 <P CLASS="Para">
 Switch to the Debug perspective. In the Debug view, notice that a launch was registered each time the
-program was run.</P>
+application was run.</P>
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-65.gif">
@@ -181,7 +181,7 @@ Relaunch</SPAN>
 <P CLASS="Para">
 Select the drop-down menu from the <SPAN CLASS="Label">
 Run</SPAN>
- button in the workbench toolbar. This list contains the previously-launched programs. Programs can
+ button in the workbench toolbar. This list contains the previously-launched configurations. Configurations can
  be relaunched by selecting them in this history list as well.</P>
 <DIV CLASS="Snapshot">
 <DIV>
