--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
@@ -24,7 +24,7 @@ In this section, you will evaluate expressions from your Java code.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-Debug junit.samples.VectorTest.java to a breakpoint at line 26 (see the <A href="qs-13.htm"> Debugging your Programs</A> section for full details). 
+Debug <i>junit.samples.VectorTest.java</i> to a breakpoint at line 26 (see the <A href="qs-13.htm"> Debugging your Programs</A> section for full details). 
 <br>In the Display view in the Debug perspective, type the following line:</P>
 <P CLASS="Para">
 <SPAN CLASS="Code">
