--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
@@ -111,7 +111,7 @@ System.getProperties()</SPAN>.</P>
 <TD valign="top" align="left">
 <P CLASS="Para">
 Select the entire line you just typed and select <SPAN CLASS="Label">
-Display from the context menu (or select the equilvalent item the editor toolbar or Run menu).</SPAN></P>
+Display from the context menu (or select the equivalent item the editor toolbar or Run menu).</SPAN></P>
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-80.gif">
