--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -9,9 +9,9 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Debugging Your Programs</H1>
+Debugging Your Applications</H1>
 <P CLASS="Para">
-In this section, you will debug a Java program.</P>
+In this section, you will debug a Java application.</P>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
 <THEAD>
 </THEAD>
