init editor  tt

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
@@ -9,8 +9,21 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Editor</H1>
-<P>&nbsp;<br>
-  <img src=" ../ngibmcpy.gif"> </P>
-
+<P>&nbsp;</P>
+<ul>
+  <li>You can speed up typing by: 
+    <ul>
+      <li>Turning off all before-compiling problem indication (unselect all checkboxes 
+        in <b>Window &gt; Preferences &gt; Java &gt; Editor &gt; Problem Indication</b>)</li>
+      <li>Hiding the overview ruler (undelect the <b>Window &gt; Preferences &gt; 
+        Java &gt; Editor &gt; Appearance &gt; Show overwier ruler</b> checkbox)</li>
+      <li>Turning off the editor -&gt; Outline synchronization (unselect the <b>Window 
+        &gt; Preferences &gt; Java &gt; Editor &gt; Appearance &gt; Synchonize 
+        outline selection on cursor move</b>)<br>
+      </li>
+    </ul>
+  </li>
+</ul>
+<img src=" ../ngibmcpy.gif">
 </BODY>
 </HTML>
