init package name compression tt

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-4.htm
@@ -9,8 +9,18 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Package Name Compression</H1>
-<P>&nbsp;<br>
-  <img src=" ../ngibmcpy.gif"> </P>
-
+<H1 CLASS="Head">&nbsp;</H1>
+<ul>
+  <li>You can compress the package names displayes in the Package Explorer and 
+    Packages views. Select the <b>Window &gt; Preference &gt; Java &gt; Appearance 
+    &gt; Compress package name segments</b> checkbox<b>.</b></li>
+  <li>Compression pattern can contain a digit (n), which represents n characters 
+    in the package name.</li>
+  <li>Compression pattern is not used if the resulting name is longer than the 
+    original package name. For example, using a pattern '3~.' on a package named 
+    'org.eclipse.jdt' results in 'org.ecl~.jdt'<br>
+  </li>
+</ul>
+<img src=" ../ngibmcpy.gif">
 </BODY>
 </HTML>
