*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-6.htm
@@ -29,7 +29,9 @@
   <li>If you type a new type name e.g. <code>JTable(&lt;code assist&gt;</code> 
     the import statement is added to the compilation unit.</li>
   <li>Code assist works also in import statements and presents you the list of 
-    packages and types.<br>
+    packages and types.</li>
+  <li>Code assist can come up automatically. Select the <b>Window &gt; Preferences 
+    &gt; Java &gt; Editor &gt; Code Assist &gt; Enable auto activation</b> checkbox.<br>
   </li>
 </ul>
 <P>&nbsp;<br>
