--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -25,11 +25,20 @@ view.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">In the Package Explorer, find&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>
-and from its context menu, select&nbsp;<span CLASS="Label">Open Type Hierarchy</span>
-(or select from the menu bar Navigate > Open Type Hierarchy or press F4).
-If the hierarchy view is already open you can also drag and drop TestCase.java
-to the upper hierarchy view.</div>
+<div CLASS="Para">In the Package Explorer, find&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>.
+From its context menu, select&nbsp;<span CLASS="Label">Open Type Hierarchy</span>.
+You can also open type hierarchy view:
+<ul>
+<li>
+from the menu bar by selecting Navigate > Open Type Hierarchy.&nbsp;</li>
+
+<li>
+from the keyboard by pressing F4 after selecting&nbsp;<span CLASS="Filename">TestCase.java</span>.&nbsp;</li>
+
+<li>
+by using drag and drop by dropping TestCase.java to an open hierarchy view.</li>
+</ul>
+</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-28.gif" NOSAVE height=302 width=306></div>
 </td>
@@ -44,8 +53,8 @@ to the upper hierarchy view.</div>
 <div CLASS="Para">In the Hierarchy view, click the&nbsp;<span CLASS="Label">Show
 the Type Hierarchy&nbsp;</span>button to see the class hierarchy, including
 the base classes and subclasses.
-<br>The arrow next to the image of TestCase marks that the hierarchy was
-opened on this type.</div>
+<br>The small arrow on the left side of the type icon of TestCase indicates
+that the hierarchy was opened on this type.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-29.gif" NOSAVE height=382 width=229></div>
 </td>
@@ -58,14 +67,14 @@ opened on this type.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">Click the&nbsp;<span CLASS="Label">Show the Supertype
-Hierarchy view</span> button to see a hierarchy showing the type's parent
-elements including implemented interfaces (i.e., the results of going up
-the type hierarchy).</div>
+Hierarchy</span> button to see a hierarchy showing the type's parent elements
+including implemented interfaces,&nbsp; i.e., the results of going up the
+type hierarchy.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-30.gif" NOSAVE height=264 width=240></div>
 
-<div CLASS="Para">Notice that in this "upside-down" display, you can now
-see that TestCase implements the Test interface.</div>
+<div CLASS="Para">In this "reversed hierarchy" view, you can see that TestCase
+implements the Test interface.</div>
 </td>
 </tr>
 
@@ -75,8 +84,8 @@ see that TestCase implements the Test interface.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">Click the&nbsp;<span CLASS="Label">Show the Subtype Hierarchy&nbsp;</span>button
-in the view toolbar.</div>
+<div CLASS="Para">Click the&nbsp;<span CLASS="Label">Show the Subtype Hierarchy</span>
+button in the view toolbar.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-31.gif" NOSAVE height=176 width=240></div>
 </td>
@@ -92,8 +101,7 @@ in the view toolbar.</div>
 in the method pane (the bottom pane) in the Hierarchy view, then select
 the runTest() method in the method pane.</div>
 
-<div CLASS="Para">Notice that the view now shows all the types implementing
-runTest().</div>
+<div CLASS="Para">The view will now show all the types implementing runTest().</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-32.gif" NOSAVE height=556 width=262></div>
 </td>
@@ -106,8 +114,8 @@ runTest().</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the Hierarchy view, click the&nbsp;<span CLASS="Label">Show
-the Supertype Hierarchy view</span> button. Then in the list pane, select
-countTestCases() to display the places where this method is overridden.</div>
+the Supertype Hierarchy</span> button. Then in the list pane, select countTestCases()
+to display the places where this method is overridden.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-33.gif" NOSAVE height=254 width=269></div>
 </td>
@@ -131,13 +139,13 @@ in the Hierarchy view and also opens in an active editor.</div>
 <td><b>8.</b></td>
 
 <td>
-<div CLASS="Para">Bring the Package Explorer to the front and select the
-package junit.framework. Use&nbsp;<span CLASS="Label">Open Type Hierarchy</span>
+<div CLASS="Para">Activate the Package Explorer and select the package
+junit.framework. Use&nbsp;<span CLASS="Label">Open Type Hierarchy</span>
 from its context menu.</div>
 
 <div CLASS="Para">A hierarchy is opened containing all classes of the package.
 For completion of the tree, the hierarchy also shows some classes from
-other packages. These types are shown with a white filled type image.&nbsp;
+other packages. These types are shown by a type image with a white fill.&nbsp;
 <br><img SRC="../images/qs-33a.gif" NOSAVE height=506 width=263></div>
 </td>
 </tr>
@@ -146,8 +154,8 @@ other packages. These types are shown with a white filled type image.&nbsp;
 <td><b>9.</b></td>
 
 <td>Use&nbsp;<span CLASS="Label">Previous Hierarchy Inputs</span> to go
-back&nbsp; to a previously opened element. Click on the arrow next to the
-button to see a menu or click on the button to edit the history list.
+back to a previously opened element. Click on the arrow next to the button
+to see a menu or click on the button to edit the history list.
 <br><img SRC="../images/qs-33b.gif" NOSAVE height=226 width=263></td>
 </tr>
 
@@ -157,26 +165,15 @@ button to see a menu or click on the button to edit the history list.
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">Select from the menu bar Window > Preferences. Go to&nbsp;<span CLASS="Label">Java</span>
+<div CLASS="Para">From the menu bar, select Window > Preferences. Go to&nbsp;<span CLASS="Label">Java</span>
 and select&nbsp;<span CLASS="Label">Open a new Type Hierarchy Perspective</span>.
 Then click&nbsp;<span CLASS="Label">OK</span>.</div>
 </td>
 </tr>
 
-<tr VALIGN=TOP>
-<td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para"><b>11.</b></div>
-</td>
-
-<td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">Select&nbsp;<span CLASS="Label">Open a new Type Hierarchy
-Perspective</span> . Then click&nbsp;<span CLASS="Label">OK</span>.</div>
-</td>
-</tr>
-
 <tr>
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para"><b>12.</b></div>
+<div CLASS="Para"><b>11.</b></div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
@@ -186,11 +183,12 @@ Navigate menu bar.</div>
 
 <div CLASS="Para">The resource containing the selected type is shown in
 a new perspective (the Hierarchy perspective), and its source is shown
-in the Java editor. If the preference option for viewing type hierarchy
-perspectives is set, you can have more than one type hierarchy in your
-workbench and switch between them as needed.
-<br>Under Window > Preferences > Workbench > Perspectives you can configure
-how new perspectives are opened: Either in same window or as a new window.</div>
+in the Java editor.&nbsp;
+<p>By setting the preference option for viewing type hierarchy perspectives,
+you can have more than one type hierarchy in your workbench and switch
+between them as needed.&nbsp;
+<br>You can also configure whether a new perspective opens in a new window
+under Window > Preferences > Workbench > Perspectives.</div>
 </td>
 </tr>
 </table>
