--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-7.htm
@@ -19,9 +19,17 @@
         Java &gt; Editor &gt; Appearance &gt; Show overwier ruler</b> checkbox)</li>
       <li>Turning off the editor -&gt; Outline synchronization (unselect the <b>Window 
         &gt; Preferences &gt; Java &gt; Editor &gt; Appearance &gt; Synchonize 
-        outline selection on cursor move</b>)<br>
-      </li>
+        outline selection on cursor move</b>)</li>
     </ul>
+  </li>
+  <li>You can turn off the tooltips by toggling off the <b>Show Text Hover</b> 
+    workbench toolbar button (Note: this button is only enabled when a Java editor 
+    is open).</li>
+  <li>You can have your copyright notice generated for newly created Java files. 
+    Edit the 'filecomment' template (or edit the 'typecomment' template if you 
+    need to customize the comment generated for each new type). Note: make sure 
+    that the appropriate checkbox(es) under <b>Window &gt; Preferences &gt; Java 
+    &gt; Code Generation</b> is/are selected.<br>
   </li>
 </ul>
 <img src=" ../ngibmcpy.gif">
