*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
@@ -11,7 +11,7 @@
 <H1 CLASS="Head">
 Evaluating expressions</H1>
 <P CLASS="Para">
-When a thread suspends, the debugger supports expression evaluation in the context of a stack frame in that thread.</P>
+When the VM suspends a thread, the debugger supports expression evaluation in the context of a stack frame in that thread. <br><b>Note:</b> Evaluations cannot be performed in threads that have been manually suspended.</P>
 <ol>
   <li>
 <P CLASS="Para">
