--- a/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
@@ -53,7 +53,7 @@ Showing and hiding the navigation frame</h2>
 <p>To increase the space
 available for viewing the help content, the navigation frame can be hidden.To hide the navigation frame, click the 
 <b>Toggle Navigation</b> button
-<img border="0" src="../images/hidenav.gif">
+<img border="0" src="../images/hidenav.gif" alt="Navigation button" width="16" height="16">
 on the Help view's toolbar. To show it, click the button again.</p>
 
 <h2>Printing online help</h2>
@@ -61,7 +61,7 @@ on the Help view's toolbar. To show it, click the button again.</p>
 <ol>
   <li>Select the topic in the navigation frame.</li>
   <li>Click the <b>Print</b> button
-  <img border="0" src="../images/print.gif">
+  <img border="0" src="../images/print.gif" alt="Print button" width="16" height="16">
     in the Help toolbar.</li>
   <li>Select the desired printer settings, and click <b>Print</b>.</li>
 </ol>
