--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-3c.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-3c.htm
@@ -19,7 +19,7 @@ Drop cursors indicate where you can dock floating views in the workbench window.
 <TR>
 <TD COLSPAN="1" valign="top" align="left" height="38">
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/drop_top_source.gif" width="20" height="20">
+<img align="texttop" border="0" src="../images/drop_top_source.gif" width="20" height="20" alt="Up arrow">
 </P>
 </TD>
 <TD COLSPAN="1" valign="top" align="left" height="38">
@@ -30,7 +30,7 @@ Dock above: if you release the mouse button when a dock above cursor is displaye
 <TR>
 <TD ROWSPAN="1" COLSPAN="1" valign="top" align="left" height="38">
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/drop_bottom_source.gif" width="20" height="20">
+<img align="texttop" border="0" src="../images/drop_bottom_source.gif" width="20" height="20" alt="Down arrow">
 </P>
 </TD>
 <TD ROWSPAN="1" COLSPAN="1" valign="top" align="left" height="38">
@@ -40,7 +40,7 @@ Dock below: if you release the mouse button when a dock below cursor is displaye
 </TR>
 <TR>
 <TD ROWSPAN="1" COLSPAN="1" valign="top" align="left" height="38">
-<P CLASS="Para"><img align="texttop" border="0" src="../images/drop_right_source.gif" width="20" height="20">
+<P CLASS="Para"><img align="texttop" border="0" src="../images/drop_right_source.gif" width="20" height="20" alt="Right arrow">
 </P>
 </TD>
 <TD ROWSPAN="1" COLSPAN="1" valign="top" align="left" height="38">
@@ -50,7 +50,7 @@ Dock to the right: If you release the mouse button when a dock to the right curs
 </TR>
 <TR>
 <TD COLSPAN="1" valign="top" align="left" height="38">
-<img align="texttop" border="0" src="../images/drop_left_source.gif" width="20" height="20">
+<img align="texttop" border="0" src="../images/drop_left_source.gif" width="20" height="20" alt="Left arrow">
 </TD>
 <TD COLSPAN="1" valign="top" align="left" height="38">
 Dock to the left: if you release the mouse button when a dock to the left cursor is displayed, the floating view will appear to the left of the view underneath the cursor.
@@ -58,7 +58,7 @@ Dock to the left: if you release the mouse button when a dock to the left cursor
 </TR>
 <TR>
 <TD COLSPAN="1" valign="top" align="left" height="38">
-<img align="texttop" border="0" src="../images/drop_stack.gif" width="20" height="20">
+<img align="texttop" border="0" src="../images/drop_stack.gif" width="20" height="20" alt="Stack ">
 </TD>
 <TD COLSPAN="1" valign="top" align="left" height="38">
 Stack: if you release the mouse button when a stack cursor is displayed, the floating view will appear as a Tab in the same pane as the view underneath the cursor.
@@ -66,7 +66,7 @@ Stack: if you release the mouse button when a stack cursor is displayed, the flo
 </TR>
 <TR>
 <TD COLSPAN="1" valign="top" align="left" height="38">
-<img align="texttop" border="0" src="../images/drop_invalid_source.gif" width="21" height="21">
+<img align="texttop" border="0" src="../images/drop_invalid_source.gif" width="21" height="21" alt="Restricted icon">
 </TD>
 <TD COLSPAN="1" valign="top" align="left" height="38">
 Restricted: if you release the mouse button when a restricted cursor is displayed, the floating view will not dock there.  For example, you cannot dock a view in the editor area.
@@ -74,7 +74,7 @@ Restricted: if you release the mouse button when a restricted cursor is displaye
 </TR>
 <TR>
 <TD COLSPAN="1" valign="top" align="left" height="38">
-<img align="texttop" border="0" src="../images/drop_offscreen.gif" width="20" height="20">
+<img align="texttop" border="0" src="../images/drop_offscreen.gif" width="20" height="20" alt="Detach icon">
 </TD>
 <TD COLSPAN="1" valign="top" align="left" height="38">
 Detach: if you release the mouse button when a detach cursor is displayed, the view will
