*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_running_script_programmatically.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_running_script_programmatically.htm
@@ -11,15 +11,14 @@ Running Ant scripts programmatically
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>
-Running Ant scripts programmatically</H1>
+<h2>
+Running Ant scripts programmatically</h2>
 <p>
 The Ant support built into Eclipse allows plug-ins to programmatically run Ant scripts.
 This is done via the <a href="../reference/api/org/eclipse/ant/core/AntRunner.html"><b>AntRunner</b></a> 
 class included in the <b> org.eclipse.ant.core</b> plug-in.
 </p>
 
-<h2>Example</h2>
 <p>The following code snippet shows an example of how to use the <a href="../reference/api/org/eclipse/ant/core/AntRunner.html"><b>AntRunner</b></a>:</p>
 
 <pre><font color="#4444CC">import org.eclipse.ant.core.AntRunner;
