--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_actionfilters.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_actionfilters.htm
@@ -5,14 +5,14 @@
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <TITLE>
-Workbench action filters
+Boolean expressions and action filters
 </TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H2>
-Workbench action filters</H2>
+Boolean expressions and action filters</H2>
 <p>
 When a plug-in contributes an action to the workbench UI using one of the menu
 extension points, it can specify conditions under which the menu item is enabled
