--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68bg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68bg.htm
@@ -10,8 +10,8 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
 Understanding the comparison</H1>
-<p CLASS="Head">Comparing two files (file1.txt and file2.txt) results in the following
-compare editor. The left side shows the contents of file1.txt and the right side
+<p CLASS="Head">If you compare two files (file1.txt and file2.txt), the following results
+ are shown in the compare editor. The left side shows the contents of file1.txt and the right side
 shows the contents of file2.txt. The lines connecting the left and right panes
 indicate the differences between the files.</p>
 <p CLASS="Head">You can double
@@ -41,7 +41,22 @@ Looking at the numbered changes:</p>
     gray we follow its difference bar to the right (see #3) and notice that the
     right file does not contain the line (see red circle).</li>
 </ul>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-31.htm">Comparison editors</a><br>
+<a href="../concepts/concepts-30.htm">Team synchronization</a><br>
+<a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
+<a href="../concepts/concepts-30b.htm">Synchronize view</a><br>
+<a href="../concepts/concepts-17a.htm">Local history</a></p>
 
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-68.htm">Comparing resources</a><br>
+<a href="tasks-115.htm">Synchronizing with a stream</a><br>
+<a href="tasks-68dg.htm">Merging changes in the comparison editor</a><br>
+<a href="tasks-113b.htm">Resolving conflicts and merging changes</a><br>
+<a href="tasks-68b.htm">Setting preferences for comparing files</a><br>
+<a href="tasks-101.htm">Comparing resources with repository versions</a><br>
+<a href="tasks-3g.htm">Tiling editors</a></p>
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
 </p>
