--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-63cg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-63cg.htm
@@ -25,7 +25,8 @@ copy the resources and click <b>OK</b>.</li>
 </ol>
 <P><b>Tip</b>: You can also copy resources by holding down the Ctrl key and
 dragging them from the original location to the new location in the Navigator
-view.
+view. A horizontal line will appear to show you where the resource will be moved to. 
+You must drag the resource to the exact location where you want it moved.
 </P>
 
 
