--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68dg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68dg.htm
@@ -38,22 +38,20 @@ file2.txt compared </p>
 <img align="texttop" border="0" src="../images/image80_compare_editor.jpg" width="446" height="267" alt=" "></p>
 
 
-<P>&nbsp;<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-31.htm">Comparison editors<br>
-</a><a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
-<a href="../concepts/concepts-30b.htm">Synchronize view<br>
-</a> <a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;
+<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-31.htm">Comparison editors</a><br>
+<a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
+<a href="../concepts/concepts-30b.htm">Synchronize view</a><br>
+<a href="../concepts/concepts-30.htm">Team synchronization</a>
 </P>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-</a><a href="tasks-68.htm">Comparing resources</a>
-<a href="tasks-115.htm"><br>
-Synchronizing with a stream<br>
-</a><a href="tasks-113b.htm">
-Resolving conflicts and merging changes</a><a href="tasks-68b.htm"><br>
-Setting preferences for comparing files</a>&nbsp;
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-68.htm">Comparing resources</a><br>
+<a href="tasks-68bg.htm">Understanding the comparison</a><br>
+<a href="tasks-115.htm">Synchronizing with a stream</a><br>
+<a href="tasks-113b.htm">Resolving conflicts and merging changes</a><br>
+<a href="tasks-68b.htm">Setting preferences for comparing files</a>
 </p>
 
 <p>&nbsp;<br>
