--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-20.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-20.htm
@@ -1,38 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Changing the default font for the text editor</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Changing the default font for the text editor</H1>
-<ol>
-  <li>
-    <p CLASS="Para">On the main menu bar, click <b>Workbench &gt; Preferences</b>.</li>
-  <li>
-    <p CLASS="Para">Expand the <b>Workbench</b> category and select <b> Default Text
-    Editor</b>.</li>
-  <li>
-    <p CLASS="Para">Click the <b>Change</b> push button to change the default
-    font.</li>
-</ol>
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-2.htm"><br>
-</a><a href="../concepts/concepts-6.htm">
-Editors</a></p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-46.htm">Opening files for editing</a><br>
-<a href="tasks-51.htm">Associating editors with file types</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Changing the default font for the text editor</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Changing fonts</H1><p>There are 3 main fonts in use by the Eclipse platform.<dl>  <dt><em>Banner Font</em></dt>  <dd>used in PDE editors, welcome pages and in the title area of    many wizards. For instance the New Project wizard uses this font for the top    title.</dd>  <dt><em>Header Font</em></dt>  <dd>used for the secondary titles in wizards. For instance the    New Project wizard uses this font for the lower title.</dd>  <dt><em>Text Font</em></dt>  <dd>used in text editors and the console views.</dd></dl>You can change these fonts as follows:<ol>  <li>On the main menu bar, click <b>Window &gt; Preferences</b>.</li>  <li>Expand the <b>Workbench</b> category and select <b>Fonts</b>.</li>  <li>Select the font you want to change.</li>  <li>Click the <b>Change</b> push button to change the font.</li></ol><p>Note: You can also click the <b>Use System Font</b> button to set the font   to a reasonable value chosen by the platform. For example, on Windows this will   use the font selected in the Display Properties control panel. </p>  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/accessibility/fontsandcolors.htm">Fonts and Colors in Eclipse</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-46.htm">Opening files for editing</a><br><a href="tasks-51.htm">Associating editors with file types</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
