--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-16.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-16.htm
@@ -31,7 +31,8 @@ box. </P>
   <li>
 <P CLASS="Para">
 Click <b>OK</b> to close the Preferences page. The workbench will automatically 
-perform incremental builds of resources modified since the last build. </P>
+perform incremental builds of resources modified since the last build. 
+Whenever a resource is modified, another incremental build occurs.  </P>
   </li>
 </ol>
 
